// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders correctly 1`] = `
<Text
  color="#000000"
  size={12}
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "Pompiere-Regular",
        "fontSize": 12,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
        "textTransform": "none",
      },
    ]
  }
  textDecoration="none"
  textTransform="none"
>
  test
</Text>
`;

exports[`Text renders with smaller size 1`] = `
<Text
  color="#000000"
  size={10}
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "Pompiere-Regular",
        "fontSize": 10,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
        "textTransform": "none",
      },
    ]
  }
  textDecoration="none"
  textTransform="none"
>
  test
</Text>
`;

exports[`Text renders with specified number of lines 1`] = `
<Text
  color="#000000"
  numberOfLines={3}
  size={12}
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "Pompiere-Regular",
        "fontSize": 12,
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
        "textTransform": "none",
      },
    ]
  }
  textDecoration="none"
  textTransform="none"
>
  test renders with specified number of lines renders with specified number of lines renders with specified number of lines renders with specified number of lines renders with specified number of lines renders with specified number of lines renders with specified number of lines renders with specified number of lines renders with specified number of lines test
</Text>
`;
